rpuskas: yet another formatting fix for css that is causing page overflow

--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
 .ui-collapsible-heading{
 	margin: 0px 0px;
+}   
+.ui-collapsible-content{
+	margin: 0px 0px;
 }
 
 .ui-header{
